vendor/pin-project-1.0.7/tests/ui/cfg/cfg_attr-resolve.stderr
error[E0599]: no method named `project` found for struct `Pin<&mut Foo<u8>>` in the current scope
  --> $DIR/cfg_attr-resolve.rs:10:30
   |
10 |     let _ = Pin::new(&mut x).project(); //~ ERROR E0599
   |                              ^^^^^^^ method not found in `Pin<&mut Foo<u8>>`
