vendor/pin-project-1.0.7/tests/ui/cfg/cfg_attr-resolve.rs
use std::pin::Pin;

#[cfg_attr(any(), pin_project::pin_project)]
struct Foo<T> {
    f: T,
}

fn main() {
    let mut x = Foo { f: 0_u8 };
    let _ = Pin::new(&mut x).project(); //~ ERROR E0599
}
